--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,2 +1,4 @@
-align.preset = more    // For pretty alignment.
-maxColumn = 100 // For my wide 30" display.
+version = 3.6.1
+align.preset = more
+maxColumn = 100
+runner.dialect = scala3
